--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
   },
   "devDependencies": {
     "@architect/sandbox": "^3.3"
+  },
+  "dependencies": {
+    "argon2": "^0.27.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.10",
+    "mongoose-timestamp": "^0.6.0"
   }
 }
