--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.0.0",
   "description": "A simple Begin app with the minimum necessary file structure",
   "scripts": {
-    "start": "npx sandbox"
+    "build": "npx tsc",
+    "start": "npm run build && npx arc sandbox",
+    "deploy": "npm run build && npx arc deploy"
   },
   "devDependencies": {
-    "@architect/sandbox": "^3.3"
+    "@architect/sandbox": "^3.3",
+    "@types/node": "^14.14.20"
+  },
+  "dependencies": {
+    "@types/mongoose": "^5.10.3",
+    "typescript": "^4.1.3"
   }
 }
