--- a/src/http/package.json
+++ b/src/http/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.27.1",
+    "date-fns": "^2.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.10"
   }
