--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^14.14.20"
   },
   "dependencies": {
+    "@types/date-fns": "^2.6.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
     "typescript": "^4.1.3"
   }
