--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@types/date-fns": "^2.6.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "@architect/architect": "^8.4.5",
+    "argon2": "^0.27.1",
+    "date-fns": "^2.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.10"
   }
 }
