--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@types/node": "^14.14.20"
   },
   "dependencies": {
+    "@architect/architect": "^8.4.5",
     "@types/date-fns": "^2.6.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
-    "typescript": "^4.1.3",
-    "@architect/architect": "^8.4.5",
     "argon2": "^0.27.1",
     "date-fns": "^2.16.1",
+    "jsonschema": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.10"
+    "mongoose": "^5.11.10",
+    "typescript": "^4.1.3"
   }
 }
