--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -13,6 +13,7 @@
     "argon2": "^0.27.1",
     "date-fns": "^2.16.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.11.11"
   }
 }
