--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@types/node": "^14.14.20"
   },
   "dependencies": {
-    "@architect/architect": "^8.4.5",
+    "@architect/architect": "^8.4.6",
+    "@architect/functions": "^3.13.9",
     "@types/date-fns": "^2.6.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
@@ -22,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.11.10",
+    "rand-token": "^1.0.1",
     "typescript": "^4.1.3"
   }
 }
