--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "A simple Begin app with the minimum necessary file structure",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc && npx arc hydrate",
     "start": "npm run build && npx arc sandbox",
     "deploy": "npm run build && npx arc deploy"
   },
