--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "deploy": "npx arc deploy"
   },
   "devDependencies": {
-    "@architect/sandbox": "^3.3"
+    "@architect/sandbox": "^3.3",
+    "jsdoc": "^3.6.6"
   },
   "dependencies": {
     "@architect/architect": "^8.4.6",
