--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@architect/architect": "^8.4.7",
     "@architect/functions": "^3.13.9",
     "argon2": "^0.27.1",
+    "date-fns": "^2.16.1",
     "jsonschema": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
