--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.11.10",
-    "rand-token": "^1.0.1"
+    "rand-token": "^1.0.1",
+    "typescript": "^4.1.3"
   }
 }
